A partial fix for git hub issue #12 - Polish language overlaps container. It also fixes the skip logic disappearing while dragging

--- a/assets/stylesheets/contenttoolbar.css
+++ b/assets/stylesheets/contenttoolbar.css
@@ -8,7 +8,7 @@
 }
 
 #contentToolbar.backgroundHide {
-    background-color: #edf0f6;
+    visibility: hidden;
 }
 
 #contentToolbar span {
